# ferrousforge

./: .gitignore  .gitlab-ci.yml  Cargo.toml  PROJECT_STRUCTURE.md  README.md  README_LLAMA_CPP.md  build.rs
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  benchmark.yml  ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  CI_CD.md  IMPLEMENTATION_ROADMAP.md  LLAMA_CPP_INTEGRATION.md  LLAMA_CPP_SETUP.md  MOLD_DESIGN.md  OLLAMA_AUTO_INSTALL.md  TROUBLESHOOTING.md
examples/: llama_cpp_example.rs
resources/: config.toml.example
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs  request.rs  response.rs  streaming.rs
src/cli/: mod.rs
src/cli/commands/: list.rs  mod.rs  pull.rs  remove.rs  run.rs  serve.rs
src/config/: defaults.rs  loader.rs  mod.rs  settings.rs
src/core/: context.rs  engine.rs  gateway.rs  mod.rs  registry.rs  scheduler.rs
src/gateway/: mod.rs
src/inference/: backend.rs  executor.rs  mod.rs
src/inference/backends/: llama_cpp.rs  llama_cpp_ffi.rs  mod.rs
src/inference/hardware/: mod.rs
src/management/: mod.rs
src/models/: base.rs  metadata.rs  mod.rs  mold.rs  traits.rs  types.rs
src/models/audio/: mod.rs
src/models/image/: mod.rs
src/models/multimodal/: mod.rs
src/models/text/: mod.rs
src/models/video/: mod.rs
src/monitoring/: mod.rs
src/plugins/: mod.rs
src/server/: mod.rs
src/server/http/: middleware.rs  mod.rs  routes.rs  server.rs
src/server/http/handlers/: generate.rs  health.rs  mod.rs  models.rs
src/storage/: cache.rs  download.rs  manager.rs  mod.rs  registry.rs
src/utils/: encoding.rs  logging.rs  metrics.rs  mod.rs  validation.rs
tests/: integration_llama_cpp.rs
