[package]
name = "ferrousforge"
version = "0.1.0"
edition = "2021"
authors = ["FerrousForge Contributors"]
description = "A unified inference platform supporting multiple model types (text, image, audio, video) built with Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/ferrousforge"
homepage = "https://github.com/your-org/ferrousforge"
documentation = "https://docs.rs/ferrousforge"
keywords = ["ai", "ml", "inference", "llm", "model", "ollama"]
categories = ["science", "web-programming", "api-bindings"]

[workspace]
members = []

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web 框架
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 配置管理
config = "0.14"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# HTTP 客户端（用于模型下载）
reqwest = { version = "0.11", features = ["json", "stream"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 文件系统
walkdir = "2.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# 流处理
futures = "0.3"
futures-util = "0.3"

# 并发
parking_lot = "0.12"

# 指标和监控（可选，未来使用）
# prometheus = "0.13"
# opentelemetry = "0.21"
# opentelemetry-otlp = "0.14"

# 模型相关（未来添加）
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"

[dev-dependencies]
# 测试
tokio-test = "0.4"
mockall = "0.12"

# 测试工具
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[lib]
name = "ferrousforge"
path = "src/lib.rs"

[[bin]]
name = "ferrousforge"
path = "src/main.rs"

